--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
         <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+            html,body {
+                height: 100%;
+                width: 100%;
+            }
+        </style>
     </head>
     <body class="flex items-center justify-center">
-        <h1>Rice, Rice, baby!</h1>
+        <h1 class="font-bold text-4xl">Rice, Rice, baby!</h1>
     </body>
 </html>
